<resources>
    <!--- IMC APP -->
    <string name="app_name">Android master</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="title_imc">Calculadora de IMC</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="add_age">Sumar edad</string>
    <string name="add_weight">Sumar peso</string>
    <string name="substract_age">Restar edad</string>
    <string name="substract_weight">Restar peso</string>
    <string name="slider">Slider edad</string>
    <string name="result">Tu Resultado</string>
    <string name="reCalculate">Volver a calcular</string>
    <string name="description_underweight">Su peso esta en la categoría de Bajo peso para adultos de su estatura.</string>
    <string name="description_healthy_weight">Su peso esta en la categoría de Peso saludable para adultos de su estatura.</string>
    <string name="description_overweight">Su peso esta en la categoría de Sobrepeso para adultos de su estatura.</string>
    <string name="description_obesity">Su peso esta en la categoría de Peso Obesidad para adultos de su estatura.</string>
    <string name="error">Error</string>
    <string name="underweight">Bajo peso</string>
    <string name="healthy_weight">Peso saludable</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity">Obesidad</string>
    <string name="btn_start">Empezar</string>
    <string name="imc_title">Caculadora IMC</string>
    <string name="result_imc">Resultado IMC\n</string>
    <string name="result_first_app">Resultado</string>

    <!--- SALUDO APP -->
    <string name="first_app_name">SaludApp</string>

    <!--- TodoAPP -->
    <string name="todo_app">TODO</string>
    <string name="todo_title">Cosas por hacer</string>
    <string name="todo_category">Categorias</string>
    <string name="todo_task_title">Tareas</string>
    <string name="todo_hint">Añade una tarea</string>
    <string name="todo_business">Negocios</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_work">Trabajo</string>
    <string name="todo_other">Otro</string>
    <string name="todo_text_btn_add_task">Crear tarea</string>
    <string name="hint_name">Pulsa para escribir</string>
    <string name="superHeroList">Super Heroes</string>
    <string name="detail_superhero">Detalle super heroe</string>

    <!--- Super hero APP -->
    <string name="superhero_stats_intelligence">Inteligencia</string>
    <string name="superhero_stats_strength">Fuerza</string>
    <string name="superhero_stats_speed">Velocidad</string>
    <string name="superhero_stats_durability">Durabilidad</string>
    <string name="superhero_stats_power">Poder</string>
    <string name="superhero_stats_combat">Combate</string>

    <!--- Settings -->
    <string name="settings">Configuraciones</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="description_mode_dark">Activa el modo oscuro para mejorar visual</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="description_bluetooth">Conecta periféricos sin cables</string>
    <string name="vibration">Vibrar para las llamada</string>
    <string name="volume">Volumen</string>
</resources>